Fix spacing

--- a/src/app/collection/pages/browse/browse.page.scss
+++ b/src/app/collection/pages/browse/browse.page.scss
@@ -1,6 +1,5 @@
 .prime {
     margin: 2px;
-    max-width: 280px;
 }
 
 .message {
