--- a/src/app/collection/pages/prime/overview/overview.page.scss
+++ b/src/app/collection/pages/prime/overview/overview.page.scss
@@ -1,4 +1,3 @@
 .prime {
     margin: 2px;
-    max-width: 280px;
 }
